<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/text_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/nav_header_vertical_spacing">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/text_available_balance"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/available_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/sample"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:gravity="center_vertical"
                    android:padding="@dimen/text_padding"
                    android:text="@string/text_transaction_in_or_out"
                    android:textColor="@color/colorPrimary" />

                <com.example.pralhad.dailyexpneses.general.LabeledSwitch
                    android:id="@+id/switch_in_out_transaction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textSize="14sp"
                    app:on="true"
                    app:textOff="@string/text_transaction_out"
                    app:textOn="@string/text_transaction_in" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/switch_return_money_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_padding"
                android:orientation="vertical"
                android:visibility="gone">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:gravity="center_vertical"
                        android:padding="@dimen/text_padding"
                        android:text="@string/text_on_return_policy"
                        android:textColor="@color/colorPrimary" />

                    <com.example.pralhad.dailyexpneses.general.LabeledSwitch
                        android:id="@+id/switch_return_money"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:textSize="14sp"
                        app:on="false"
                        app:textOff="@string/text_no"
                        app:textOn="@string/text_yes" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/due_date_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_padding"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/tr_due_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/text_padding"
                        android:text="@string/text_due_date"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        app:icon="@drawable/baseline_date_range_black" />
                </LinearLayout>

            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_transaction_person_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/nav_header_vertical_spacing"
                android:hint="@string/text_money_take_give_person">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/transaction_person_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/outline_person_pin_black"
                    android:drawablePadding="@dimen/fab_margin"
                    android:inputType="textPersonName"
                    android:maxLength="20"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_transaction_amount"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/nav_header_vertical_spacing"
                android:hint="@string/text_how_many_amount">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/transaction_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/outline_attach_money_black"
                    android:drawablePadding="@dimen/fab_margin"
                    android:inputType="number"
                    android:maxLength="10"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/tr_date_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/nav_header_vertical_spacing"
                android:gravity="center"
                android:padding="@dimen/text_padding"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                app:icon="@drawable/baseline_date_range_black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel_btn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginEnd="@dimen/nav_header_vertical_spacing"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/cancel_btn"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/save_transactions"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginStart="@dimen/nav_header_vertical_spacing"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/save_btn"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</com.google.android.material.card.MaterialCardView>

