<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/text_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/nav_header_vertical_spacing">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/text_available_balance"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/available_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />
            </RelativeLayout>

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_border"
                android:orientation="horizontal"
                android:padding="@dimen/text_padding">

                <ImageView
                    android:layout_marginStart="5dp"
                    android:layout_gravity="center"
                    android:layout_width="@dimen/dimens25dp"
                    android:layout_height="@dimen/dimens25dp"
                    android:src="@drawable/ic_income_source" />

                <Spinner
                    android:id="@+id/income_source"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:textAlignment="textStart" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_transaction_amount"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/nav_header_vertical_spacing"
                android:hint="@string/text_how_many_amount">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/transaction_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/outline_attach_money_black"
                    android:drawablePadding="@dimen/fab_margin"
                    android:inputType="number"
                    android:maxLength="10"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/tr_date_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/nav_header_vertical_spacing"
                android:gravity="center"
                android:padding="@dimen/text_padding"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                app:icon="@drawable/baseline_date_range_black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel_btn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginEnd="@dimen/nav_header_vertical_spacing"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/btn_cancel"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/save_update_transactions"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginStart="@dimen/nav_header_vertical_spacing"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/btn_save"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</com.google.android.material.card.MaterialCardView>

